Changelog for Poi
=================


1.2rc4 (unreleased)
-------------------

- Removed poi_email_* dtml pages from the skins directory, in favour
  of templates in events.py.
  Fixes http://plone.org/products/poi/issues/206 [maurits]

- Fixed 'Field missing error' from kss (only visible in the logs).
  [maurits]

- Fixed possible in rich text field widget by now giving the number of
  rows as an integer instead of a string.
  Fixes http://plone.org/products/poi/issues/203
  [maurits]

- Migrations: now doing intermediate transaction commits to give the
  migrations a chance to finish on big sites.  [maurits]

- Fixed UnicodeError in email sending.
  Fixes http://plone.org/products/poi/issues/198
  Thanks to Derek Broughton for the first version of this fix.
  [maurits]

- Added Portuguese translations by Nuno Cruz.  Thanks!  [maurits]

- After creating a response, first check if emails need to be sent
  before figuring out the text to send.  [maurits]

- In migrations guard against outdated catalog items that have no
  existing object associated with them anymore.  [maurits]

- End-of-lines and svn:ignores set all over the place.  [maurits]


1.2rc3 (2008-09-28)
-------------------

- Added profiles/default/metadata.xml: version 1.2.  [maurits]

- Do not show (part of) the Add response form when no responses can be
  added.  Show a discreet message instead.  [maurits]

- Migrate old style responses in PoiPscTrackers as well.  [maurits]

- Code cleanup with pyflakes and pep8.  Only syntactic changes, no
  behaviour changes.  [maurits]


1.2 rc 2 (25 September 2008)
----------------------------

- Using Products.CMFPlone.utils.safe_unicode to avoid
  UnicodeDecodeErrors.  [maurits]


1.2 rc 1 (12 September 2008)
----------------------------

- Added migration step to migrate workflow changes (in the responses)
  from ids to titles.  [maurits]

- Only show the add response form when the user is allowed to add a
  response.  [maurits]
